--- a/all.css
+++ b/all.css
@@ -7,6 +7,7 @@ body {
 .container {
   background-color: rgba(54,54,54,0.7);
   padding-top: 10px;
+  padding-bottom: 10px;
 }
 .row {
   display: flex;
